--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,7 @@ a {
   }
 }
 
+
 @media screen and (max-width: 600px) {
   .scroll-horizontal {
     overflow: auto !important;
@@ -86,3 +87,4 @@ a {
     width:200px;
   }
 }
+/*
